--- a/src/index.html
+++ b/src/index.html
@@ -3,11 +3,12 @@
 
 <head>
     <meta charset="utf-8" />
-    <title>Projeto Frontend 2025</title>
+    <title>Sistema FUNTEA</title>
     <base href="/" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link rel="preconnect" href="https://primefaces.org" />
-    <link rel="icon" type="image/x-icon" href="https://primefaces.org/cdn/primeng/images/favicon.png" />
+    <!-- Ícone personalizado local -->
+    <link rel="icon" type="image/png" href="assets/image/logo.png" />
     <link href="https://fonts.cdnfonts.com/css/lato" rel="stylesheet" />
 </head>
 
